# otto-package-github

./: .gitignore  Cargo.toml  NOTES.md  README.md  otto.toml
schemas/: branch-create-input.schema.json  branch-delete-input.schema.json  comment-input.schema.json  fetch-file-input.schema.json  git-commit-input.schema.json  git-push-input.schema.json  git-stage-input.schema.json  grant-scope.schema.json  issue-create-input.schema.json  label-edit-input.schema.json  list-commits-input.schema.json  list-issues-input.schema.json  list-pull-requests-input.schema.json  prepare-checkout-input.schema.json  prepare-checkout-output.schema.json  pull-request-merge-input.schema.json  pull-request-open-input.schema.json  read-output.schema.json  search-code-input.schema.json  setup-details.schema.json  write-output.schema.json
src/: command.rs  lib.rs  setup_check.rs
tests/: manifest_contract.rs  runtime_contract.rs
ui/: grant.form.json  setup.form.json
