[package]
name = "otto-package-github"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[lib]
name = "otto_tool_github"
path = "src/lib.rs"

[[bin]]
name = "otto-tool-github"
path = "src/bin/otto-tool-github.rs"

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.32"
otto-extension-sdk = { git = "ssh://git@github.com/jpiepkow/otto.git", tag = "sdk-v0.1.6" }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "io-std"] }

[dev-dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.2"
toml = "1.1.2"
